<resources>
    <string name="app_name">feasto</string>
    <string name="burger_logo_desc">Burger Logo</string>
    <string name="app_title">feasto</string>
    <string name="app_subtitle">Tap. Order. Feast.</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_sign_up">Sign UP</string>
    <string name="btn_login">Login</string>
    <string name="text_or">OR</string>
    <string name="title_login">Login</string>
    <string name="hint_username_email">Username or email</string>
    <string name="hint_password">password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_or_continue_with">or continue with</string>
    <string name="text_no_account">Don’t have an account ? Sign up</string>
    <string name="google_login_desc">Google Login</string>
    <string name="facebook_login_desc">Facebook Login</string>
    <string name="apple_login_desc">Apple Login</string>
    <string name="title_signup">Sign up</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="text_already_have_account">Already have an account ? Login</string>
    <string name="title_menu">Menu</string>
    <string name="hint_search">Search</string>
    <string name="cat_burgers">Burgers</string>
    <string name="cat_pizza">Pizza</string>
    <string name="cat_desserts">Desserts</string>
    <string name="title_promotions">Promotions</string>
    <string name="promo_title">Today’s Offer</string>
    <string name="promo_highlight">Free Pasta</string>
    <string name="promo_desc">on all orders above 50</string>
    <string name="title_popular">Popular</string>
    <string name="item_beef_burger">Beef Burger</string>
    <string name="item_pepperoni_pizza">Pepperoni Pizza</string>
    <string name="price_15">15</string>
    <string name="price_25">25</string>
    <string name="title_forgot_password">Forgot Password ?</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_language">Language</string>
    <string name="menu_settings">settings</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_home_desc">Home</string>
    <string name="nav_cart_desc">Cart</string>
    <string name="nav_profile_desc">Profile</string>
    <string name="profile_pic_desc">Profile Picture</string>
    <string name="promo_image_desc">Promotion Image</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="title_cart">Cart</string>
    <string name="item_desc_burger">Beef burgers with fries combo.</string>
    <string name="item_desc_cheesecake">dense cream cheese filling, Madagascar vanilla</string>
    <string name="btn_place_order">Place your order</string>
    <string name="text_cart_empty">Your cart is empty</string>
    <string name="item_desc_beef_burger">Flame-grilled beef, American cheese, pickles, iceberg lettuce, secret sauce, sesame bun.</string>
    <string name="item_chicken_burger">Chicken burger</string>
    <string name="item_desc_chicken_burger">Flame-grilled chicken, cheese, pickles, iceberg lettuce, BBQ sauce, sesame bun.</string>
    <string name="item_zinger_burger">Zinger burger</string>
    <string name="item_desc_zinger_burger">Crispy spicy chicken, shredded lettuce, and creamy mayo on a toasted bun.</string>
    <string name="price_12">12</string>
    <string name="nav_back_desc">Back</string>
    <string name="btn_add_desc">Add</string>
    <string name="title_pizzas">Pizzas</string>
    <string name="item_pepperoni_passion">The Pepperoni Passion</string>
    <string name="desc_pepperoni_passion">Zesty tomato sauce, bubbly mozzarella, and double portions of crisp, curled pepperoni.</string>
    <string name="item_bbq_chicken">The BBQ Chicken</string>
    <string name="desc_bbq_chicken">Tangy BBQ sauce base, grilled chicken strips, red onions, cilantro, and smoked gouda or mozzarella.</string>
    <string name="item_chicken_fajita">Chicken Fajita</string>
    <string name="desc_chicken_fajita">Spiced fajita chicken, colorful bell peppers, red onions, mozzarella, and a sprinkle of oregano or chili flakes.</string>
    <string name="price_22">22</string>
    <string name="price_20">20</string>
    <string name="title_desserts">Desserts</string>
    <string name="item_ny_cheesecake">New York Cheesecake</string>
    <string name="desc_ny_cheesecake">Graham cracker crust, dense cream cheese filling, Madagascar vanilla, and a hint of lemon zest.</string>
    <string name="item_lava_cake">Chocolate Lava Cake</string>
    <string name="desc_lava_cake">Dark cocoa fondant, molten chocolate center, sea salt, and a scoop of vanilla bean gelato.</string>
    <string name="item_tiramisu">Classic Tiramisu</string>
    <string name="desc_tiramisu">Espresso-soaked ladyfingers, whipped mascarpone cream, Marsala wine, and a heavy dusting of cocoa powder.</string>
    <string name="price_10">10</string>
    <string name="price_8">8</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="text_order_id">Order ID: #FST12345</string>
    <string name="text_total">Total:</string>
    <string name="btn_confirm_order">Confirm Order</string>
    <string name="text_items">Items</string>
    <string name="title_verify_code">Verification</string>
    <string name="hint_enter_code">Enter 6-digit code</string>
    <string name="btn_verify">Verify</string>
    <string name="menu_order_history">Order History</string>
    <string name="title_order_history">Your Orders</string>
    <string name="text_no_orders">No orders yet</string>
    <string name="btn_continue_google">Continue with Google</string>
    <string name="btn_signup_google">Sign up with Google</string>
</resources>